# AdvancedRag

./: .gitignore  README.md  firestore_loader.py  pyproject.toml  requirements.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
